@@ -1,3 +1,4 @@
+using System.Linq;
 using System.Reflection;
 using JetBrains.Annotations;
 using Nanoray.PluginManager;
@@ -7,6 +8,7 @@ namespace VionheartScarlet.Artifacts;
 
 public class CloakAndDagger : Artifact, IRegisterable
 {
+    bool usedCloakAndDagger = false;
     public static void Register(IPluginPackage<IModManifest> package, IModHelper helper)
     {
         helper.Content.Artifacts.RegisterArtifact(new ArtifactConfiguration
@@ -34,28 +36,43 @@ public class CloakAndDagger : Artifact, IRegisterable
         );
     }
 
-    // public override bool? OnPlayerAttackMakeItPierce(State state, Combat combat)
-    // {
-    //     if (state.ship.Get(VionheartScarlet.Instance.Fade.Status) > 0)
-    //     {
-    //         combat.QueueImmediate
-    //         (
-    //             new ADummyAction
-    //             {
-    //                 dialogueSelector = ".CloakAndDaggerTrigger"
-    //             }
-    //         );
-    //         return true;
-    //     }
-    //     return null;
-    // }
-    public override int ModifyBaseDamage(int baseDamage, Card? card, State state, Combat? combat, bool fromPlayer)
+    public override bool? OnPlayerAttackMakeItPierce(State state, Combat combat)
     {
-        Ship ship = state.ship;
-        if (ship.Get(VionheartScarlet.Instance.Fade.Status) > 0 && fromPlayer)
+        var ship = state.ship;
+        ship.Add(VionheartScarlet.Instance.Fade.Status, -1);
+        if (state.ship.Get(VionheartScarlet.Instance.Fade.Status) > 0 && !usedCloakAndDagger)
         {
-            return 1;
+            combat.QueueImmediate
+            (
+                new ADummyAction
+                {
+                    dialogueSelector = ".CloakAndDaggerTrigger"
+                }
+            );
+            VionheartScarlet.Instance.Helper.ModData.SetModData(ship, "fadeUsedThisTurn", true);
+            usedCloakAndDagger = true;
+            return true;
         }
-        return 0;
+        else
+        {
+            return null;
+        }
+    }
+    // public override int ModifyBaseDamage(int baseDamage, Card? card, State state, Combat? combat, bool fromPlayer)
+    // {
+    //     Ship ship = state.ship;
+    //     if (ship.Get(VionheartScarlet.Instance.Fade.Status) > 0 && fromPlayer)
+    //     {
+    //         return 1;
+    //     }
+    //     return 0;
+    // }
+    public override void OnReceiveArtifact(State state)
+    {
+        VionheartScarlet.Instance.Helper.ModData.SetModData(state.ship, "hasCloakAndDagger", true);
+    }
+    public override void OnRemoveArtifact(State state)
+    {
+        VionheartScarlet.Instance.Helper.ModData.SetModData(state.ship, "hasCloakAndDagger", false);
     }
 }
